# recosys

./: .gitignore  Amd64JenkinsDockerfile  Dockerfile  JenkinsDockerfile  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml  traefik.toml
_tests/: conftest.py
_tests/unit/test_app/: __init__.py  test_models.py  test_routers.py
_tests/unit/test_ml/: __init__.py  test_flux.py  test_preprocess.py  test_train.py
_tests/unit/test_ml/test_sifts/: test_di_sift.py  test_pe_sift.py  test_tt_sift.py
_tests/unit/test_utils/: test_logger.py
app/: app.py
app/models/: __init__.py  recommendation.py  user.py
app/recommenders/legacy/: rec_model_BaseLine_v1.surp
app/routers/: __init__.py  data_integrity_check.py  predictor_check.py  train_test_check.py  users.py
app_do/: Dockerfile  pyproject.toml
app_do/_tests/unit/test_ml/: test_train.py
app_do/app/: __init__.py  meta_data.json
app_do/app/models/: movie.py
app_do/app/routers/: data_integrity_check.py  movies.py  recommendations.py
app_do/utils/: __init__.py  logger.py
app_ek/: Dockerfile
app_ek/_tests/unit/test_ml/: test_preprocess.py
app_ek/_tests/unit/test_ml/test_sifts/: test_pe_sift.py
app_ek/app/routers/: predictor_check.py  train_test_check.py
app_ek/utils/: flux.py
data/: raw_data_1667912638764.csv
ml/: __init__.py  dvc.yaml  flux.py  ingress.py  preprocess.py  pyproject.toml  train.py  utils.py
ml/data/: raw.dvc
ml/data/prepared/processed/: processed.csv.dvc
ml/data/prepared/test/: .gitignore  testset.csv.dvc
ml/data/prepared/train/: .gitignore  trainset.csv.dvc
ml/model/: .gitignore  model.surp.dvc
ml/sifts/: __init__.py  data_integrity_sift.py  predictor_evaluation_sift.py  train_test_sift.py
ml/src/: __init__.py  flux.py  ingress.py  preprocess.py  train.py
ml/src/sifts/: __init__.py  data_integrity_sift.py  predictor_evaluation_sift.py  train_test_sift.py
utils/: __init__.py  flux.py  testing.py
